--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-eslint": "^8.2.1",
+    "babel-generator": "^6.26.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
+    "babel-helpers": "^6.24.1",
     "babel-jest": "^21.0.2",
     "babel-loader": "^7.1.1",
     "babel-plugin-dynamic-import-node": "^1.2.0",
@@ -40,6 +42,7 @@
     "copy-webpack-plugin": "^4.0.1",
     "cross-spawn": "^5.0.1",
     "css-loader": "^0.28.0",
+    "detect-indent": "^6.0.0",
     "eslint": "^4.15.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-friendly-formatter": "^3.0.0",
